--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 S3_AWS_REGION=france
 S3_AWS_ENDPOINT=localhost:9000
-S3_ACCESS_KEY_ID="minio"
-S3_SECRET_ACCESS_KEY="minio_pass"
+S3_ACCESS_KEY_ID=minio
+S3_SECRET_ACCESS_KEY=minio_pass
+KUBECONFIG=/home/usersio/.kube/config
