--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ink": "^4.4.1",
     "ink-select-input": "^5.0.0",
     "js-yaml": "^4.1.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0"
   },
   "devDependencies": {
