--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    // "rootDir": "./",                                  /* Specify the root folder within your source files. */
-    "esModuleInterop": false,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
+    "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "noImplicitAny": true,                            /* Enable error reporting for expressions and declarations with an implied 'any' type. */
@@ -24,9 +23,9 @@
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
     "jsx": "react-jsx",
     "isolatedModules": true,
-    "outDir": "dist",
+    "outDir": "build",
 		"rootDir": "src",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
   },
   "include": [
     "**/*"
