--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "dev": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/index.js"
+    "start": "tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,6 @@
     "ink": "^4.4.1",
     "ink-select-input": "^5.0.0",
     "js-yaml": "^4.1.0",
-    "node-fetch": "^3.3.2",
     "react": "^18.2.0"
   },
   "devDependencies": {
