add number of page and current page number indication + fetch objects in a bucket

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 S3_AWS_REGION=us-east-1 
-S3_AWS_ENDPOINT=http://localhost:9000
+S3_AWS_ENDPOINT=http://127.0.0.1:9000
 S3_ACCESS_KEY_ID=minio
 S3_SECRET_ACCESS_KEY=minio_pass
 KUBECONFIG=/home/usersio/.kube/config
