--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "ink": "^4.4.1",
     "ink-select-input": "^5.0.0",
+    "ink-spinner": "^5.0.0",
     "js-yaml": "^4.1.0",
     "react": "^18.2.0"
   },
