--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ S3_AWS_ENDPOINT=http://127.0.0.1:9000
 S3_ACCESS_KEY_ID=minio
 S3_SECRET_ACCESS_KEY=minio_pass
 KUBECONFIG=/home/usersio/.kube/config
-DEBUG=
+DEBUG=t
