--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ink": "^4.4.1",
     "ink-select-input": "^5.0.0",
     "ink-spinner": "^5.0.0",
+    "ink-text-input": "^5.0.1",
     "js-yaml": "^4.1.0",
     "react": "^18.2.0"
   },
